--- a/style.css
+++ b/style.css
@@ -265,8 +265,37 @@ span{
     padding: 0px 5px 0px 5px;
     margin-right: 8px;
 }
-/* Foot Panel 4 */
+
+/* Foot panel 4 */
 .foot-panel4{
+    background-color: #152435;
+    display: block;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.foot-panel4 div{
+    background-color: #152435;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    margin-left: 100px;
+    width: 1050px;
+
+}
+.foot-panel4 ul{
+    font-size: 0.73rem;
+    color: #a19f9f;
+    width: 150px;
+}
+.foot-panel4 ul p{
+    font-weight: 700;
+    color: #d1cbcb;
+}
+
+/* Foot Panel 5 */
+.foot-panel5{
     background-color: #152435;
     color: white;
     height: 88px;
@@ -283,35 +312,6 @@ span{
     padding-right: 10px;
 }
 
-/* Foot panel 5 */
-.foot-panel5{
-    background-color: #152435;
-    display: block;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.foot-panel5 div{
-    background-color: #152435;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    margin-left: 100px;
-    width: 1050px;
-
-}
-.foot-panel5 ul{
-    font-size: 0.73rem;
-    color: #a19f9f;
-    width: 150px;
-}
-.foot-panel5 ul p{
-    font-weight: 700;
-    color: #d1cbcb;
-}
-
-
 
 
 @media (max-width: 768px) {
@@ -324,49 +324,68 @@ span{
         width: 100%;
         margin: 10px 0;
     }
-    .shop-section {
-        flex-direction: column;
-        align-items: center;
+    .nav-signin{
+        display: none;
     }
-    .box {
-        width: 90%;
+    .nav-return{
+        display: none;
     }
-    .foot-panel2 {
-        flex-direction: row;
-        align-items: center;
-        height: max-content;
+    .nav-address{
+        display: none;
     }
-    .foot-panel2 ul {
-        width: 90%;
-        margin: 10px 0px;
-    }
-}
-
-@media (max-width: 480px) {
     .panel-ops {
         display: none;
     }
     .panel-deals {
         display: none;
     }
-    .foot-panel3 {
+    .shop-section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .hero-msg{
+        height: 55px;
+    }
+    .box {
+        width: 90%;
+    }
+    .foot-panel2 {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        flex-direction: column;
+        align-items: center;
+        height: max-content;
+    }
+    .foot-panel2 ul {
+        width: 90%;
+        margin: 10px 0px; 
+    }
+    .foot-panel3{
         flex-direction: row;
         align-items: center;
     }
+}
+
+@media (max-width: 300px) {
     .foot-box {
         margin: 5px 0;
+        padding-right: 20px;
     }
 } 
 
 @media (max-width: 768px) {
-    .foot-panel5 div {
-        width: 70%; /* Adjust width for tablets */
+    .foot-panel4 div {
+        width: 50%;
+        flex-direction: column;
+        margin-left: 0;
+        align-items: center;
+        justify-content: center;
     }
 }
 
-@media (max-width: 480px) {
-    .foot-panel5 div {
-        width: 100%; /* Full width for mobile devices */
+@media (min-width: 768px) and (max-width:1200px) {
+    .foot-panel4 div {
+        width: 100%;
         margin-left: 0;
     }
 }
